popularLinks and myLinks spacing fix padding of 1st td

--- a/web/themes/custom/myusf/sass/src/partials/_dashboard.scss
+++ b/web/themes/custom/myusf/sass/src/partials/_dashboard.scss
@@ -556,7 +556,7 @@
 						    line-height: 1.5;
 						}
 						&:first-child td {
-							padding-top: 1rem!important;
+							padding-top: .75rem!important;
 						}
 
 						&:last-child td {
@@ -784,7 +784,7 @@
 						&:nth-child(5) td , &:nth-child(6) td  {
 							position:relative;
 							left: -79%;
-							top: 360px;
+							top: 355px;
 							
 						    @include media-breakpoint-down(phone) {
 								left: 0;
